# fake-wx-svr

./: Application.hs  Foundation.hs  Model.hs  README.md  Settings.hs  fake-wx-svr.cabal  fc-web-game-server.cabal
Handler/: Home.hs
Handler/Admin/: MP.hs
Handler/Simulate/: MP.hs
app/: devel.hs
config/: keter.yml  models  routes  settings.yml  sqlite.yml  test-settings.yml
config/certs/: api.weixin.qq.com.crt  api.weixin.qq.com.key
templates/: homepage.hamlet
templates/admin/: app_list.hamlet
